--- a/!part3_modeling.ipynb
+++ b/!part3_modeling.ipynb
@@ -2,8 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from sklearn.cluster import KMeans\n",
@@ -24,8 +26,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "labels_path = 'test_files/s_exp.csv'\n",
@@ -34,26 +38,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
       "text/html": [
        "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
@@ -67,32 +60,32 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>0 4 X|0.125|0.155 X|0.290|0.725</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>0 0 L|0.678|0.340</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>-3 0 X|0.036|0.174 X|0.255|0.164 C|0.443|0.195...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>0 0 C|0.004|0.243</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>3.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>-3 7 A|0.171|0.073 C|0.263|0.130 X|0.408|0.185...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>4</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>4.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -100,14 +93,14 @@
       ],
       "text/plain": [
        "                                                 exp  song_id  song_index\n",
-       "0                    0 4 X|0.125|0.155 X|0.290|0.725        0           0\n",
-       "1                                  0 0 L|0.678|0.340        0           1\n",
-       "2  -3 0 X|0.036|0.174 X|0.255|0.164 C|0.443|0.195...        0           2\n",
-       "3                                  0 0 C|0.004|0.243        0           3\n",
-       "4  -3 7 A|0.171|0.073 C|0.263|0.130 X|0.408|0.185...        0           4"
+       "0                    0 4 X|0.125|0.155 X|0.290|0.725      0.0         0.0\n",
+       "1                                  0 0 L|0.678|0.340      0.0         1.0\n",
+       "2  -3 0 X|0.036|0.174 X|0.255|0.164 C|0.443|0.195...      0.0         2.0\n",
+       "3                                  0 0 C|0.004|0.243      0.0         3.0\n",
+       "4  -3 7 A|0.171|0.073 C|0.263|0.130 X|0.408|0.185...      0.0         4.0"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -119,26 +112,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {},
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
       "text/html": [
        "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
@@ -210,7 +192,7 @@
        "4  7.0  0.170573 -31.157552  4.0  2.0  0.5759"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -229,8 +211,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {},
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "notes = ['C', 'Db', 'D', 'Eb', 'E', 'F', 'Gb', 'G', 'Ab', 'A', 'Bb', 'B']\n",
@@ -305,8 +289,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {},
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -314,7 +300,7 @@
        "23"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -327,33 +313,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {},
+   "execution_count": 22,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def get_kmeans_clusters(s_exp_features):\n",
     "    features_scaled = preprocessing.scale(s_exp_features)\n",
+    "    #print(features_scaled.sum(axis=0))\n",
     "    kmeans = KMeans(n_clusters=k_size).fit(features_scaled)\n",
     "    return kmeans.labels_"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
-   "metadata": {},
+   "execution_count": 23,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-4.32986980e-15 -4.32986980e-15 -3.55271368e-15 -8.82627305e-15\n",
+      " -1.55431223e-15 -5.99520433e-15]\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
-       "array([14,  5,  9,  1, 19,  9,  2,  3, 19, 14,  9,  9,  1, 12,  9,  5, 13,\n",
-       "       18,  1, 12,  9, 19,  2,  3,  2,  2, 13,  3,  2, 15,  5, 12, 11,  1,\n",
-       "       10,  7,  2,  8, 11,  4,  5, 11, 20,  1,  2,  5, 17, 11,  8,  5, 10,\n",
-       "        4, 20, 18, 20,  7,  3, 11,  0,  8,  6,  6,  8,  7,  4,  1, 21, 11,\n",
-       "        5,  0, 20,  3, 16, 22, 10,  8,  5, 21,  8, 12, 20, 15,  8, 15, 21,\n",
-       "       21,  6,  8, 15, 22,  1, 21], dtype=int32)"
+       "array([18,  2, 10,  3, 19, 10, 10,  5, 19, 18, 17, 10,  3,  4, 10,  2,  0,\n",
+       "       11,  3,  4, 10, 19,  1,  5,  1,  1,  0,  5,  1, 16,  2, 14, 21,  3,\n",
+       "       16, 20,  1,  6, 21, 12,  2, 12, 21,  3,  1,  2,  3, 12,  6,  2, 16,\n",
+       "       12, 21, 11, 21, 20,  5, 13, 15,  6,  7,  7, 18, 20, 12,  3,  8, 12,\n",
+       "        2, 15,  6,  5,  9,  7, 16,  6,  2,  8,  6,  4, 21, 22,  6, 22,  8,\n",
+       "        8, 13,  6, 16, 22,  3, 15], dtype=int32)"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -372,8 +371,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
-   "metadata": {},
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "class Node:\n",
@@ -388,8 +389,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
-   "metadata": {},
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def generate_nodes(labels):\n",
@@ -411,8 +414,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
-   "metadata": {},
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def generate_cpt(node_objects):\n",
@@ -440,8 +445,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
-   "metadata": {},
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def select_from_weighted_dct(dct):\n",
@@ -455,8 +462,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
-   "metadata": {},
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def sequence_s_expressions(n, node_objects):\n",
@@ -480,8 +489,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
-   "metadata": {},
+   "execution_count": 14,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def get_notes_from_category(chord, category):\n",
@@ -501,8 +512,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
-   "metadata": {},
+   "execution_count": 15,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def select_note(lst, curr, min_s, max_s): # maybe split into two functions?\n",
@@ -530,8 +543,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
-   "metadata": {},
+   "execution_count": 16,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def produce_notes(num_measures, list_of_chords, node_objects): #length of chords list = num of measures\n",
@@ -562,26 +577,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
-   "metadata": {},
+   "execution_count": 17,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
       "text/html": [
        "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
@@ -594,57 +598,57 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>D3</td>\n",
-       "      <td>0.026</td>\n",
-       "      <td>0.191</td>\n",
+       "      <td>Bb3</td>\n",
+       "      <td>0.078</td>\n",
+       "      <td>0.201</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>Eb3</td>\n",
-       "      <td>0.258</td>\n",
-       "      <td>0.108</td>\n",
+       "      <td>Bb3</td>\n",
+       "      <td>0.299</td>\n",
+       "      <td>0.249</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>Ab3</td>\n",
-       "      <td>0.490</td>\n",
-       "      <td>0.145</td>\n",
+       "      <td>D4</td>\n",
+       "      <td>1.072</td>\n",
+       "      <td>0.057</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>D3</td>\n",
-       "      <td>0.664</td>\n",
-       "      <td>0.143</td>\n",
+       "      <td>A3</td>\n",
+       "      <td>1.156</td>\n",
+       "      <td>0.195</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>C3</td>\n",
-       "      <td>0.827</td>\n",
-       "      <td>0.236</td>\n",
+       "      <td>A3</td>\n",
+       "      <td>1.374</td>\n",
+       "      <td>0.091</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>D3</td>\n",
-       "      <td>1.329</td>\n",
-       "      <td>0.038</td>\n",
+       "      <td>E3</td>\n",
+       "      <td>1.474</td>\n",
+       "      <td>0.074</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>Db3</td>\n",
-       "      <td>1.375</td>\n",
-       "      <td>0.039</td>\n",
+       "      <td>Gb3</td>\n",
+       "      <td>1.573</td>\n",
+       "      <td>0.161</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
        "      <td>D3</td>\n",
-       "      <td>1.421</td>\n",
-       "      <td>0.111</td>\n",
+       "      <td>1.760</td>\n",
+       "      <td>0.143</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
-       "      <td>D3</td>\n",
-       "      <td>1.536</td>\n",
-       "      <td>0.126</td>\n",
+       "      <td>Gb3</td>\n",
+       "      <td>1.936</td>\n",
+       "      <td>0.137</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -652,18 +656,18 @@
       ],
       "text/plain": [
        "  note_name  start_time duration\n",
-       "0        D3       0.026    0.191\n",
-       "1       Eb3       0.258    0.108\n",
-       "2       Ab3       0.490    0.145\n",
-       "3        D3       0.664    0.143\n",
-       "4        C3       0.827    0.236\n",
-       "5        D3       1.329    0.038\n",
-       "6       Db3       1.375    0.039\n",
-       "7        D3       1.421    0.111\n",
-       "8        D3       1.536    0.126"
+       "0       Bb3       0.078    0.201\n",
+       "1       Bb3       0.299    0.249\n",
+       "2        D4       1.072    0.057\n",
+       "3        A3       1.156    0.195\n",
+       "4        A3       1.374    0.091\n",
+       "5        E3       1.474    0.074\n",
+       "6       Gb3       1.573    0.161\n",
+       "7        D3       1.760    0.143\n",
+       "8       Gb3       1.936    0.137"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -692,7 +696,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.6.0"
   }
  },
  "nbformat": 4,
